shtimi i Logs per pagesat me Stripe

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "phpmailer/phpmailer": "^7.0",
-        "stripe/stripe-php": "^19.2"
+        "stripe/stripe-php": "^19.2",
+        "vlucas/phpdotenv": "^5.6"
     }
 }
